# gojek-receipt-to-xlsx

./: .gitignore  REFERENCE_ANALYSIS.md  pyproject.toml
src/gojek_receipt/: __main__.py  cli.py
src/gojek_receipt/core/: __init__.py  extractor.py  models.py  renderer.py
src/gojek_receipt_to_xlsx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_extractor.py  test_renderer.py
