[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gojek-receipt-to-xlsx"
version = "0.1.0"
description = "Convert a Gojek transaction-history PDF to XLSX."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gojek Receipt Contributors" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pymupdf>=1.24",
    "openpyxl>=3.1.2",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
gojek-receipt = "gojek_receipt.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/gojek_receipt/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
